--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo</title>
+    
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Font Awesome 5 Brands:wght@400&display=swap" />
     <script src="https://kit.fontawesome.com/cb792c0850.js" crossorigin="anonymous"></script>
-
+    <title>Todo App</title>
 </head>
 
 <body>
@@ -61,6 +61,8 @@
                      <i class="fa-solid fa-trash"></i>
                     </a>
                 </div>
+
+                
 
 </div>  
 
